--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ description = "Research paper analysis and RAG system"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "a2a-sdk>=0.3.19",
     "arxiv>=2.3.1",
     "braintrust>=0.3.9",
     "bs4>=0.0.2",
@@ -21,6 +22,8 @@ dependencies = [
     "python-dotenv>=1.0.0",
     "qdrant-client>=1.16.0",
     "requests>=2.32.0",
+    "sse-starlette>=3.0.3",
+    "starlette>=0.50.0",
     "supabase>=2.24.0",
     "texsoup>=0.3.1",
     "uvicorn>=0.32.0",
